# temp

./: .env  Makefile  README.md  docker-compose.yml  old_compose
backend/: .dockerignore  Dockerfile  docker-compose.yml  index.html  pyproject.toml
backend (old)/: Dockerfile  requirements.txt
backend (old)/app/: inference.py  minio.py
backend/app/: database.py  main.py
backend/app/images/: crud.py  models.py  utils.py
backend/app/users/: crud.py  schemas.py  utils.py
backend/templates/: index.html
backend/volumes/etcd/member/snap/: db
backend/volumes/milvus/rdb_data/: 000011.sst  IDENTITY  LOG  LOG.old.1735484178087658  LOG.old.1735484228466701  MANIFEST-000017
backend/volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  IDENTITY  LOG  LOG.old.1735484177921671  LOG.old.1735484228399349  MANIFEST-000016
backend/volumes/minio/.minio.sys/: format.json
frontend/: Dockerfile  RADME.md  docker-compose.yml  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  test.ipynb  todo.list  tsconfig.json
frontend/app/: layout.tsx  not-found.tsx  sitemap.ts
frontend/components/: Auth.tsx  ClusterCreationForm.tsx  Collection.tsx  Create.tsx  DropBox.tsx  Empty.tsx  Explore.tsx  Gallery.tsx  Header.tsx  ImageUploadForm.tsx  ImageUploader.tsx  Loading.tsx  Masonry.tsx  Message.tsx  Notfound.tsx  Profile.tsx  Session.tsx  Tags.tsx  View.tsx  VisualSearch.tsx
frontend/db/: crud.ts  initDb.ts  models.ts  types.ts  utils.ts
frontend/lib/: api.ts  apihelp.ts  config.ts  helper.ts  minio.ts  redis.ts  temp.ts  types.ts  (+1 more)
inference/: main.py  pending.py
(+39 files in other folders)
